Working on admin form.

--- a/nodetest1/templates/admin-login.jade
+++ b/nodetest1/templates/admin-login.jade
@@ -9,7 +9,7 @@ block content
     br
     | Password:
     br
-    input(type='password', name='password')
+    input(type='text', name='password')
     br
     br
     input(type='submit', value='login')
