--- a/nodetest1/templates/admin.jade
+++ b/nodetest1/templates/admin.jade
@@ -1,4 +1,13 @@
 extends layout-admin
 
 block content
-  h1= title
+  h1= content
+  hr
+  .left
+    .list-column
+      {list}
+  .left
+    .list-column
+      {form}
+  br.clear
+  hr
