Working on admin view.

--- a/nodetest1/templates/admin.jade
+++ b/nodetest1/templates/admin.jade
@@ -5,9 +5,9 @@ block content
   hr
   .left
     .list-column
-      {list}
+      #{list}
   .left
     .list-column
-      {form}
+      #{form}
   br.clear
   hr
